fix: styling for collapsed table rows in `#{$TABLE_SELECTOR}__expandable-row` (fixes SFKUI-6984)

--- a/packages/design/src/components/table/_table.scss
+++ b/packages/design/src/components/table/_table.scss
@@ -233,7 +233,7 @@ $table-input-offset-horizontal: 0.25rem;
             @extend %table-row-normal;
 
             &--collapsed {
-                visibility: collapse;
+                display: none;
             }
         }
 
